--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,18 @@ body {
 }
 
 #bg{
-    position:absolute;
+    position:fixed;
     z-index: -1;
-    height:100vh;
-    left:500px;
+    height:75vh;
+    left:50vw;
+}
+
+#bg2{
+    position:fixed;
+    z-index: -1;
+    height:75vh;
+    bottom:0%;
+    left:0;
 }
 
 h1{
