--- a/styles.css
+++ b/styles.css
@@ -20,8 +20,8 @@ body {
     position:fixed;
     z-index: -1;
     height:75vh;
-    bottom:0%;
     left:0;
+    bottom:0;
 }
 
 h1{
@@ -37,6 +37,10 @@ h2{
     margin: 0 auto;
 }
 
+h3{
+    font-size:20px;
+}
+
 p{
     font-size:30px;
     font-weight:100;
@@ -44,13 +48,14 @@ p{
 }
 
 #firstSection{
-    padding:50px 350px 0px 50px;
+    padding:50px 20%;
 }
 
 #logo{
     padding-bottom:10px;
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
 #logo img{
@@ -58,6 +63,7 @@ p{
     width:270px;
     align-self: center;
     margin-left:20px;
+    justify-content: center;
 }
 
 #signUp {
@@ -75,9 +81,15 @@ p{
 
 .signup-section {
     display: flex;
-    padding: 20px 10px 20px 10px;
     justify-content: space-between;
-    gap:20px;
+    flex-direction: row;
+}
+
+.form-item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap:10px;
 }
 
 .signup-left {
@@ -85,8 +97,7 @@ p{
     display: flex;
     flex-direction: column;
     padding-right: 10px;
-    max-width:10%;
-
+    max-width:100%;
     justify-content: space-around;
 }
 
@@ -110,13 +121,14 @@ p{
 
 form {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 
 input {
     padding: 5px;
     width:100%;
+    border-radius:10px;
 }
 
 
@@ -131,11 +143,12 @@ button {
     color: white;
     border: none;
     cursor: pointer;
+    width:100%;
 }
 
 #secondSection{
     display: inline-flex;
-    margin: 5% 10%;
+    margin: 5% 20%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -146,7 +159,6 @@ button {
     display: flex;
     align-items: space-between;
     gap: 20px;
-    max-width:80%;
 }
 
 
@@ -158,4 +170,71 @@ button {
     max-width:100px;
     height: 100px;
     align-self: center;
+}
+
+
+@media screen and (max-width: 600px) {
+    /* Adjust font sizes for mobile */
+    h1 {
+        font-size: 80px;
+        letter-spacing: 15px;
+    }
+
+    h2 {
+        font-size: 25px;
+    }
+
+    p {
+        font-size: 18px;
+    }
+
+    /* Adjust layout for smaller screens */
+    #firstSection {
+        padding: 25px 10%;
+    }
+
+    #signUp {
+        margin: 3% 10% 0% 10%;
+    }
+
+    /* Adjust button size */
+    button {
+        font-size: 18px;
+        padding: 5px;
+    }
+
+    #secondSection {
+        margin: 5% 10%;
+    }
+
+    /* Adjust form fields for smaller screens */
+    .signup-section {
+        flex-direction: column;
+        gap: 10px;
+        padding: 10px 5px 10px 5px;
+    }
+
+    .form-item {
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    .signup-left, .signup-right {
+        max-width: 100%;
+        padding: 0;
+    }
+
+    .signup-right {
+        padding-top: 10px;
+    }
+
+    .row {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .row img {
+        max-width: 80px;
+        height: 80px;
+    }
 }
